force-app/main/default/objects/Ordem__c/fields/DataCriacao__c.field-meta.xml
<CustomField>
    <fullName>DataCriacao__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>data na qual a ordem foi criada</description>
    <label>Data de Criação</label>
    <type>Date</type>
</CustomField>