force-app/main/default/objects/Ordem__c/fields/DataExecucao__c.field-meta.xml
<CustomField>
    <fullName>DataExecucao__c</fullName>
    <description>data na qual a ordem foi executada efetivamente</description>
    <label>Data de Execução</label>
    <type>DateTime</type>
</CustomField>