force-app/main/default/objects/Ordem__c/fields/MoedaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaPrimaria__c</fullName>
    <formula>Mercado__r.Moeda_Primaria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda Primária</label>
    <type>Text</type>
</CustomField>