force-app/main/default/objects/Ordem__c/fields/OrdemStatus__c.field-meta.xml
<CustomField>
    <fullName>OrdemStatus__c</fullName>
    <description>status da execução da ordem</description>
    <inlineHelpText>status da execução da ordem</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando</fullName>
                <default>true</default>
                <label>Aguardando</label>
            </value>
            <value>
                <fullName>Executada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Venda com Lucro</fullName>
            </value>
            <value>
                <fullName>Venda com Prejuízo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>