force-app/main/default/objects/Ordem__c/fields/preco__c.field-meta.xml
<CustomField>
    <fullName>preco__c</fullName>
    <label>Preço</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>