force-app/main/default/objects/Ordem__c/recordTypes/Vendida_com_lucro.recordType-meta.xml
<RecordType>
    <fullName>Vendida_com_lucro</fullName>
    <active>true</active>
    <label>Vendida com Lucro</label>
</RecordType>