force-app/main/default/objects/Ordem__c/recordTypes/Vendida_com_Prejuizo.recordType-meta.xml
<RecordType>
    <fullName>Vendida_com_Prejuizo</fullName>
    <active>true</active>
    <label>Vendida com Prejuizo</label>
</RecordType>