force-app/main/default/objects/Ordem__c/validationRules/Nao_cancelar_ordem_executada.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_cancelar_ordem_executada</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNULL(DataExecucao__c)) &amp;&amp; ISPICKVAL(OrdemStatus__c, &apos;Cancelada&apos;)</errorConditionFormula>
    <errorMessage>Após a ordem ser Executada, ela não pode ser cancelada!</errorMessage>
</ValidationRule>