force-app/main/default/objects/Ordem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Mercado__c</columns>
    <columns>preco__c</columns>
    <columns>Quantidade__c</columns>
    <columns>Total__c</columns>
    <columns>OrdemStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>