force-app/main/default/objects/Ordem__c/listViews/Vendas.listView-meta.xml
<ListView>
    <fullName>Vendas</fullName>
    <columns>NAME</columns>
    <columns>Mercado__c</columns>
    <columns>OrdemStatus__c</columns>
    <columns>preco__c</columns>
    <columns>Quantidade__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>Venda</value>
    </filters>
    <label>Vendas</label>
</ListView>